<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('tecnicos', function (Blueprint $table) {
            $table->id();
            $table->unsignedBigInteger('employee_id')->unique();
            $table->string('especialidad');
            $table->string('certificacion')->nullable();
            $table->enum('nivel', ['junior', 'semi_senior', 'senior', 'lead']);
            $table->enum('disponibilidad', ['disponible', 'ocupado', 'no_disponible'])->default('disponible');
            $table->text('notas')->nullable();
            $table->boolean('is_active')->default(true);
            $table->timestamps();
            $table->softDeletes();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('tecnicos');
    }
};
